# cxxit

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
includes/: blob.hpp  commit.hpp  database.hpp  entry.hpp  tree.hpp  workspace.hpp
inculdes/: blob.h  workspace.h
sources/: blob.cpp  commit.cpp  database.cpp  tree.cpp  workspace.cpp
